[tool.poetry]
name = "optivision"
version = "0.2.0"
description = "Simple Image Processing Library"
authors = ["Preet Sojitra"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.19.2"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
myst-nb = {version = "^1.0.0", python = "^3.9"}
sphinx-autoapi = "^3.0.0"
sphinx-rtd-theme = "^2.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"